# motioncam-decoder-rust

./: Cargo.toml  README.md
examples/: decode.rs
src/: container.rs  decoder.rs  error.rs  lib.rs  raw.rs  raw_legacy.rs  simd_portable.rs
