[package]
name = "motioncam-decoder"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust decoder for MotionCam RAW files"
license = "Apache-2.0"
repository = "https://github.com/Yoganshbhatt/motioncam-decoder-rust"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
memmap2 = "0.9"
wide = "0.7"
rayon = { version = "1", optional = true }

[profile.release]
lto = true
codegen-units = 1
